# oci-backup-testing

./: README.md  config.example.json  pyproject.toml  requirements.txt
docs/: oci_backup_testing_flow_redwood.html
src/oci_backup_testing/: __init__.py  cleanup.py  cli.py  compute.py  config.py  discovery.py  oci_clients.py  queue.py  report.py  restore.py  state.py  tags.py  validation.py  workflow.py
tests/: test_compute.py  test_config.py  test_discovery.py  test_queue.py  test_report.py  test_restore.py  test_state.py  test_tags.py
